# WMJ2021

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  setup
libBase/: CMakeLists.txt  README.md
libBase/include/: common.h
libBase/src/: common.cpp
libControl/: CMakeLists.txt
libControl/PID/: CMakeLists.txt  PID.yaml  README.md
libControl/PID/include/: PidResolver.hpp  SpeedResolver.hpp
libControl/PID/src/: PidResolver.cpp  SpeedResolver.cpp
libControl/Pose/: AngleSolver.yaml  CMakeLists.txt  README.md
libControl/Pose/include/: AngleSolver.hpp
libControl/Pose/src/: AngleSolver.cpp
libControl/Predict/: CMakeLists.txt  Predict.yaml  README.md
libControl/Predict/include/: MotionPredict.hpp
libControl/Predict/src/: MotionPredict.cpp
libControl/TopAimer/: CMakeLists.txt  README.md  TopAimer.yaml
libControl/TopAimer/include/: Aimer.hpp  AngleAimer.hpp  StaticAimer.hpp
libControl/TopAimer/src/: Aimer.cpp  AngleAimer.cpp  Ransac.cpp  StaticAimer.cpp
libFSM/: AutoExposure.yaml  README.md
libFSM/include/: StateMachine.h
libFSM/src/: ArmorStrike.cpp  RuneStrike.cpp  SetArmorExposure.cpp  StateMachine.cpp
libHardware/: CMakeLists.txt
libHardware/Control/: CMakeLists.txt  Control.yaml  README.md
libHardware/Control/include/: WMJRobotControl.h
libHardware/Control/src/: Chassis.cpp  Communicate.cpp  Draw.cpp  Gimbal.cpp  Gyro.cpp  Judge.cpp  Shooter.cpp  WMJRobotControl.cpp
libHardware/Transport/: CMakeLists.txt  Port.yaml  README.md
libHardware/Transport/CanPort/: CMakeLists.txt
libHardware/Transport/CanPort/include/: CanPort.hpp
libHardware/Transport/CanPort/src/: CanPort.cpp
libHardware/Transport/SerialPort/: CMakeLists.txt
libHardware/Transport/SerialPort/include/: SerialPort.hpp
libHardware/Transport/SerialPort/src/: SerialPort.cpp
libHardware/Transport/include/: Transport.h  WMJProtocol.h
libHardware/UsbCapture/: CMakeLists.txt  README.md  UsbCapture.yaml
libHardware/UsbCapture/include/: UsbCapture.h
libHardware/UsbCapture/src/: UsbCapture.cpp
libVision/: CMakeLists.txt
libVision/Armor/: ArmorDetector.yaml  CMakeLists.txt  HOG_SVM.xml  README.md
libVision/Armor/include/: ArmorDebug.hpp  ArmorDetector.hpp  ArmorSingle.hpp
libVision/Armor/src/: ArmorDebug.cpp  ArmorDetector.cpp  ArmorSingle.cpp
libVision/Bino/: Binocular.yaml  CMakeLists.txt  README.md
libVision/Bino/include/: Binocular.h
libVision/Bino/src/: Binocular.cpp
libVision/Rune/: ArmorTrigger.yaml  CMakeLists.txt  README.md
libVision/Rune/include/: ArmorTrigger.hpp
libVision/Rune/src/: ArmorTrigger.cpp
shell/: cpparam  kill  status  stop  watchdog
test/: AngleTest.cpp  ArmorTest.cpp  CalibBino.cpp  CalibMono.cpp  CameraTest.cpp  DoubleArmorTest.cpp  Recorder.cpp  RuneTest.cpp  RuneVisionTest.cpp  SetExposureTest.cpp  TakePhoto.cpp  TopTest.cpp  Undistort.cpp  clear.cpp  drawCircle.py  test_armor.yaml
wmj_cfg/: CalibMono.xml  stereo_calib.xml
